[gd_scene load_steps=97 format=3 uid="uid://b6tanufx7seix"]

[ext_resource type="Script" path="res://Scripts/Boss.gd" id="1_8lod6"]
[ext_resource type="Texture2D" uid="uid://b5yxc7hj3lt58" path="res://Art/Sprites/SHADOW Series - Frost Curse Boss/Sprite/3. attack 1 - 1.png" id="2_kgb7w"]
[ext_resource type="Texture2D" uid="uid://cf2ogqn2iaj8l" path="res://Art/Sprites/SHADOW Series - Frost Curse Boss/Sprite/3. attack 1 - 2.png" id="3_hdwy8"]
[ext_resource type="Texture2D" uid="uid://dlkrm4mdhljyp" path="res://Art/Sprites/SHADOW Series - Frost Curse Boss/Sprite/1. idle.png" id="4_d21p8"]
[ext_resource type="Texture2D" uid="uid://co4keiiqlqqmx" path="res://Art/Sprites/SHADOW Series - Frost Curse Boss/Sprite/2. run.png" id="5_jguyx"]
[ext_resource type="Texture2D" uid="uid://bgdo2y4mc0mg8" path="res://Art/Sprites/SHADOW Series - Frost Curse Boss/Sprite/9. Death.png" id="6_deid7"]
[ext_resource type="Texture2D" uid="uid://d0bvoe6ovcya0" path="res://Art/Sprites/SHADOW Series - Frost Curse Boss/Sprite/6. shoot effect.png" id="7_p05u3"]
[ext_resource type="Texture2D" uid="uid://cgfal8papn8if" path="res://Art/Sprites/SHADOW Series - Frost Curse Boss/Sprite/4. idle + Shield.png" id="8_aawi4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0pmm4"]
atlas = ExtResource("2_kgb7w")
region = Rect2(0, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0g41"]
atlas = ExtResource("2_kgb7w")
region = Rect2(137, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkiod"]
atlas = ExtResource("2_kgb7w")
region = Rect2(274, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrua1"]
atlas = ExtResource("2_kgb7w")
region = Rect2(411, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tc77"]
atlas = ExtResource("2_kgb7w")
region = Rect2(548, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0635j"]
atlas = ExtResource("2_kgb7w")
region = Rect2(685, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_401du"]
atlas = ExtResource("2_kgb7w")
region = Rect2(822, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_16ay5"]
atlas = ExtResource("2_kgb7w")
region = Rect2(959, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cxoe"]
atlas = ExtResource("3_hdwy8")
region = Rect2(0, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_av1k5"]
atlas = ExtResource("3_hdwy8")
region = Rect2(137, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2us4"]
atlas = ExtResource("3_hdwy8")
region = Rect2(274, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdiqc"]
atlas = ExtResource("3_hdwy8")
region = Rect2(411, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2adow"]
atlas = ExtResource("3_hdwy8")
region = Rect2(548, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_so2hq"]
atlas = ExtResource("3_hdwy8")
region = Rect2(685, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_terqb"]
atlas = ExtResource("3_hdwy8")
region = Rect2(822, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy70x"]
atlas = ExtResource("3_hdwy8")
region = Rect2(959, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_csm4w"]
atlas = ExtResource("3_hdwy8")
region = Rect2(1096, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_it2sp"]
atlas = ExtResource("3_hdwy8")
region = Rect2(1233, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi12n"]
atlas = ExtResource("3_hdwy8")
region = Rect2(1370, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_exx8x"]
atlas = ExtResource("4_d21p8")
region = Rect2(0, 13, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvqpa"]
atlas = ExtResource("4_d21p8")
region = Rect2(32, 13, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxk6f"]
atlas = ExtResource("4_d21p8")
region = Rect2(64, 13, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbc8f"]
atlas = ExtResource("4_d21p8")
region = Rect2(96, 13, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_428r2"]
atlas = ExtResource("4_d21p8")
region = Rect2(128, 13, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fe6y"]
atlas = ExtResource("4_d21p8")
region = Rect2(160, 13, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63uq"]
atlas = ExtResource("5_jguyx")
region = Rect2(0, 13, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_87vur"]
atlas = ExtResource("5_jguyx")
region = Rect2(32, 13, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia4gf"]
atlas = ExtResource("5_jguyx")
region = Rect2(64, 13, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l8yg"]
atlas = ExtResource("5_jguyx")
region = Rect2(96, 13, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytsog"]
atlas = ExtResource("2_kgb7w")
region = Rect2(0, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5tvi"]
atlas = ExtResource("2_kgb7w")
region = Rect2(137, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph7fu"]
atlas = ExtResource("2_kgb7w")
region = Rect2(274, 0, 137, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bqs0"]
atlas = ExtResource("2_kgb7w")
region = Rect2(411, 0, 137, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_ipymt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pmm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0g41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkiod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrua1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tc77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0635j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_401du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16ay5")
}],
"loop": false,
"name": &"Attack 1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cxoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av1k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2us4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdiqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2adow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so2hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_terqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy70x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csm4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it2sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi12n")
}],
"loop": false,
"name": &"Attack 2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exx8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvqpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxk6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbc8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_428r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fe6y")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87vur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia4gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l8yg")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytsog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5tvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph7fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bqs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5tvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytsog")
}],
"loop": true,
"name": &"ShootBody",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxl8i"]
size = Vector2(16.5, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjq2a"]
atlas = ExtResource("6_deid7")
region = Rect2(0, 0, 31, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cxq0"]
atlas = ExtResource("6_deid7")
region = Rect2(31, 0, 31, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx68h"]
atlas = ExtResource("6_deid7")
region = Rect2(62, 0, 31, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qswxr"]
atlas = ExtResource("6_deid7")
region = Rect2(93, 0, 31, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6ae0"]
atlas = ExtResource("6_deid7")
region = Rect2(124, 0, 31, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_knlox"]
atlas = ExtResource("6_deid7")
region = Rect2(155, 0, 31, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3fi8"]
atlas = ExtResource("6_deid7")
region = Rect2(186, 0, 31, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_feuag"]
atlas = ExtResource("6_deid7")
region = Rect2(217, 0, 31, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_imbc8"]
atlas = ExtResource("6_deid7")
region = Rect2(248, 0, 31, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd7lf"]
atlas = ExtResource("6_deid7")
region = Rect2(279, 0, 31, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f832"]
atlas = ExtResource("6_deid7")
region = Rect2(310, 0, 31, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_yp4p2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjq2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cxq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx68h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qswxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6ae0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knlox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3fi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feuag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imbc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd7lf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f832")
}],
"loop": true,
"name": &"Die",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ss7b5"]
atlas = ExtResource("7_p05u3")
region = Rect2(399, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgh3l"]
atlas = ExtResource("7_p05u3")
region = Rect2(532, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf100"]
atlas = ExtResource("7_p05u3")
region = Rect2(665, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3aaa"]
atlas = ExtResource("7_p05u3")
region = Rect2(798, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gfpx"]
atlas = ExtResource("7_p05u3")
region = Rect2(931, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru010"]
atlas = ExtResource("7_p05u3")
region = Rect2(1064, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_psknw"]
atlas = ExtResource("7_p05u3")
region = Rect2(1197, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ihkt"]
atlas = ExtResource("7_p05u3")
region = Rect2(1330, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_48h1x"]
atlas = ExtResource("7_p05u3")
region = Rect2(1463, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_l66lb"]
atlas = ExtResource("7_p05u3")
region = Rect2(1596, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5kxc"]
atlas = ExtResource("7_p05u3")
region = Rect2(1729, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqtfr"]
atlas = ExtResource("7_p05u3")
region = Rect2(1862, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_psjs1"]
atlas = ExtResource("7_p05u3")
region = Rect2(1995, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6yed"]
atlas = ExtResource("7_p05u3")
region = Rect2(2128, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lfly"]
atlas = ExtResource("7_p05u3")
region = Rect2(2261, 0, 133, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gi4d"]
atlas = ExtResource("7_p05u3")
region = Rect2(2394, 0, 133, 69)

[sub_resource type="SpriteFrames" id="SpriteFrames_o30t1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss7b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgh3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf100")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3aaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gfpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru010")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psknw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ihkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48h1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l66lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5kxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqtfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psjs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6yed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lfly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gi4d")
}],
"loop": true,
"name": &"Shoot",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yam58"]
atlas = ExtResource("8_aawi4")
region = Rect2(0, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhv0w"]
atlas = ExtResource("8_aawi4")
region = Rect2(53, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa3yp"]
atlas = ExtResource("8_aawi4")
region = Rect2(106, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dwhg"]
atlas = ExtResource("8_aawi4")
region = Rect2(159, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekyh4"]
atlas = ExtResource("8_aawi4")
region = Rect2(212, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuv0j"]
atlas = ExtResource("8_aawi4")
region = Rect2(265, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsels"]
atlas = ExtResource("8_aawi4")
region = Rect2(318, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhcdi"]
atlas = ExtResource("8_aawi4")
region = Rect2(371, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt13r"]
atlas = ExtResource("8_aawi4")
region = Rect2(424, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewe25"]
atlas = ExtResource("8_aawi4")
region = Rect2(477, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yc0s"]
atlas = ExtResource("8_aawi4")
region = Rect2(530, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_akxaw"]
atlas = ExtResource("8_aawi4")
region = Rect2(583, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_picux"]
atlas = ExtResource("8_aawi4")
region = Rect2(636, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_jov4o"]
atlas = ExtResource("8_aawi4")
region = Rect2(689, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_bch4r"]
atlas = ExtResource("8_aawi4")
region = Rect2(742, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_aym14"]
atlas = ExtResource("8_aawi4")
region = Rect2(795, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_204sc"]
atlas = ExtResource("8_aawi4")
region = Rect2(848, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_74i8r"]
atlas = ExtResource("8_aawi4")
region = Rect2(901, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_idla3"]
atlas = ExtResource("8_aawi4")
region = Rect2(954, 0, 53, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvngi"]
atlas = ExtResource("8_aawi4")
region = Rect2(1007, 0, 53, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_bn6kw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yam58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhv0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa3yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dwhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekyh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuv0j")
}, {
"duration": 1.1,
"texture": SubResource("AtlasTexture_hsels")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_rhcdi")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_yt13r")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_ewe25")
}, {
"duration": 1.8,
"texture": SubResource("AtlasTexture_6yc0s")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_akxaw")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_picux")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_jov4o")
}, {
"duration": 1.1,
"texture": SubResource("AtlasTexture_bch4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aym14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_204sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74i8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idla3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvngi")
}],
"loop": true,
"name": &"Shield",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kh66y"]
radius = 621.001

[sub_resource type="CircleShape2D" id="CircleShape2D_twpfk"]
radius = 123.357

[sub_resource type="CircleShape2D" id="CircleShape2D_typ3o"]
radius = 320.601

[node name="Boss" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_8lod6")

[node name="MainBody" type="AnimatedSprite2D" parent="."]
process_mode = 3
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ipymt")
animation = &"Attack 1"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(29.3333, 40)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_jxl8i")

[node name="Die" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(49, 40)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_yp4p2")
animation = &"Die"
autoplay = "Die"

[node name="Shoot" type="AnimatedSprite2D" parent="."]
position = Vector2(156, 43.3333)
rotation = -0.471239
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_o30t1")
animation = &"Shoot"
autoplay = "Shoot"
frame = 15
frame_progress = 1.0

[node name="Shield" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(32.6667, 38)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_bn6kw")
animation = &"Shield"
autoplay = "Shield"
frame_progress = 0.502825

[node name="PlayerDetect" type="Area2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(0.333333, 0.333333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2(102, 123)
shape = SubResource("CircleShape2D_kh66y")

[node name="MeleePlayerDetect" type="Area2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(0.333333, 0.333333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleePlayerDetect"]
position = Vector2(102, 125)
shape = SubResource("CircleShape2D_twpfk")

[node name="ShootPlayerDetector" type="Area2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(0.333333, 0.333333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootPlayerDetector"]
position = Vector2(101, 124)
shape = SubResource("CircleShape2D_typ3o")

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_player_detect_body_exited"]
[connection signal="body_entered" from="MeleePlayerDetect" to="." method="_on_melee_player_detect_body_entered"]
[connection signal="body_exited" from="MeleePlayerDetect" to="." method="_on_melee_player_detect_body_exited"]
[connection signal="body_entered" from="ShootPlayerDetector" to="." method="_on_shoot_player_detector_body_entered"]
[connection signal="body_exited" from="ShootPlayerDetector" to="." method="_on_shoot_player_detector_body_exited"]
